syntax = "proto3";

package com.winsigns.investment.grpc;

option java_package = "com.winsigns.investment.grpc";

import "Header.proto";
import "Capital.proto";
import "CapitalOperator.proto";

message OneCapitalMsg {
	Header header = 1;

	Capital body = 2;
}

message MutilCapitalMsg {
	Header header = 1;

	repeated Capital body = 2;
}

message CapitalOperatorMsg{
	Header header = 1;

	CapitalOperator body = 2;
}

service capital {
	rpc queryCapital(OneCapitalMsg) returns (MutilCapitalMsg) {};
	rpc operatorCapital(CapitalOperatorMsg) returns (CapitalOperatorMsg) {};
}